# pohadkomat

./: .gitignore  README.md  feeds.toml  pohadkomat.service  pohadkomat.toml  pyproject.toml
pohadkomat/: __main__.py  common.py  download.py  library.py  play.py  server.py
tests/: test_pohadkomat.py
