[tool.poetry]
name = "pohadkomat"
version = "0.1.0"
description = ""
authors = ["Martastain <martas@imm.cz>"]

[tool.poetry.dependencies]
python = "^3.10"
nxtools = "^1.6"
typer = "^0.6.1"
toml = "^0.10.2"
pydantic = "^1.10.2"
requests = "^2.28.1"
PyChromecast = "^12.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
